--- a/client/src/config.json
+++ b/client/src/config.json
@@ -1,3 +1,4 @@
 {
-  "API_BASEURL": "http://localhost:4000/api"
+  "API_BASEURL": "http://localhost:4000/api",
+  "WS_BASEURL": "http://localhost:4000/"
 }
