--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "delivery app, test project for eliftech school",
   "main": "server/index.js",
   "scripts": {
-    "start": "cd client && npm run build && cd ../server && npm start",
-    "start:dev": "cd client && npm run build && cd ../server && npm start:dev"
+    "start": "cd client && npm run build && cd ../server && npm run start",
+    "start:dev": "cd client && npm run build && cd ../server && npm run start:dev"
   },
   "author": "",
   "license": "ISC"
